2002-08-27  Robin Farine  <robin.farine@acn-group.ch>

	* acinclude.m4 (ECOS_PATH_TCL): having found tclConfig.sh in
	/<lib>/tcl<ver>, search for tkConfig.sh in /<lib>/tcl<ver> and in
	/<lib>/tk<ver>.

2002-08-03  Bart Veer  <bartv@ecoscentric.com>

	* Created as part of autoconf reorganization.

//####COPYRIGHTBEGIN####
//                                                                          
// ----------------------------------------------------------------------------
// Copyright (C) 2002 Bart Veer
//
// This file is part of the eCos autoconf support.
//
// This program is free software; you can redistribute it and/or modify it 
// under the terms of the GNU General Public License as published by the Free 
// Software Foundation; either version 2 of the License, or (at your option) 
// any later version.
// 
// This program is distributed in the hope that it will be useful, but WITHOUT 
// ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for 
// more details.
// 
// You should have received a copy of the GNU General Public License along with
// this program; if not, write to the Free Software Foundation, Inc., 
// 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
//
// ----------------------------------------------------------------------------
//                                                                          
//####COPYRIGHTEND####